# black-mesa-db-demos

./: .gitignore  README.md
EFDemos/: EFDemos.sln
EFDemos/Annotations/: Annotations.csproj  Program.cs
EFDemos/Annotations/Data/: BlackMesaContext.cs
EFDemos/Annotations/Models/: Department.cs  Employee.cs
EFDemos/AnnotationsSpectre/: AnnotationsSpectre.csproj  Program.cs
EFDemos/AnnotationsSpectre/Data/: BlackMesaContext.cs
EFDemos/AnnotationsSpectre/Models/: Department.cs  Employee.cs
EFDemos/FluentAPI/: FluentAPI.csproj  Program.cs
EFDemos/FluentAPI/Data/: BlackMesaContext.cs
EFDemos/FluentAPI/Models/: Department.cs  Employee.cs
python/: pyproject.toml  raw_psycop2g.py  requirements.txt  sqlalchemy_core.py  sqlalchemy_orm.py
