[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "greenlet==3.4.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "psycopg2-binary==2.9.11",
    "pygments==2.20.0",
    "rich==15.0.0",
    "sqlalchemy==2.0.49",
    "typing-extensions==4.15.0",
]
